tests/warn/param-opt2.jo
param newLine: Bool = false

param pageWidth: Int = if newLine then 80 else 120 // error

param maxResult: Int = getDefault 10     // error

def getDefault(x: Int): Int =
  pageWidth / 2 + x

def printOpt(s: String): Unit =
  print s
  if newLine then print "\n"

def main receives IO.stdout =
  printOpt "hello "
  printOpt "world!" with newLine = true
